[package]
name = "orpheusgraph"
version = "0.1.0"
edition = "2021"
description = "Rust knowledge graph traversal engine with Python bindings"
license-file = "LICENSE.md"
repository = "https://github.com/Mad1ay/orpheusgraph"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
petgraph = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.8"
pyo3 = { version = "0.23", features = ["extension-module"] }
rkyv = { version = "0.8", features = ["bytecheck"] }
bytecheck = "0.8"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench_traversal"
harness = false

[profile.release]
lto = true
