[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "orpheusgraph"
version = "0.1.0"
description = "Rust knowledge graph traversal engine with Python bindings"
requires-python = ">=3.10"
license = "MIT OR Apache-2.0"

[tool.maturin]
features = ["pyo3/extension-module"]
