[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "orpheusgraph"
version = "0.1.0"
description = "Rust knowledge graph traversal engine with Python bindings"
requires-python = ">=3.10"
license = { file = "LICENSE.md" }
readme = "README.md"

[tool.maturin]
features = ["pyo3/extension-module"]
